k8s/base/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    app: website
spec:
  type: NodePort
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31110   # يمكن تغييره إذا داير
